--- a/templates/index.html
+++ b/templates/index.html
@@ -11,16 +11,18 @@
         <h1>Virtual Soundboard</h1>
         <div class="soundboard" id="soundboard">
             {% for audio in audio_files %}
-            <div class="sound-button" data-sound="{{ audio }}">
-                <span class="sound-name">{{ audio.split('.')[0] }}</span>
-                <small class="key-hint"></small>
+            <div class="sound-button" data-sound="{{ audio.filename }}">
+                <span class="sound-name">{{ audio.filename.split('.')[0] }}</span>
+                {% if audio.hotkey %}
+                <small class="key-hint">[{{ audio.hotkey }}]</small>
+                {% endif %}
             </div>
             {% endfor %}
         </div>
         <div class="instructions">
             <h2>Instructions</h2>
-            <p>Click on buttons or use keyboard shortcuts to play sounds.</p>
-            <p>Default shortcuts are number keys (1-9)</p>
+            <p>Click on buttons to play sounds in the browser, or use the assigned hotkeys to play sounds from any application.</p>
+            <p>Hotkeys will work even when this window is not focused.</p>
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/soundboard.js') }}"></script>
